# pyadi-build

./: .gitignore  .tbot-workspace.yaml  .test_durations  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  config.sh  noxfile.py  pyproject.toml  requirements_dev.txt  test1.py  test_pw_stealth_v2.py  test_selenium_amd.py  test_session_extraction.py  test_uc_amd.py  test_uc_amd_v2.py
.github/workflows/: docs.yml  selfhosted-tests.yml  test.yml
adibuild/: __init__.py  builder.py  common.py  db.py  fabric_release_info.json  hdl.py  kuiper_release_info.json  linux.py  parser.py  uboot.py
adibuild/cli/: __init__.py  helpers.py  main.py  mcp_server.py
adibuild/core/: __init__.py  builder.py  config.py  docker.py  executor.py  toolchain.py  vivado.py
adibuild/docker/download_runner/: Dockerfile  entrypoint.py
adibuild/models/: __init__.py  adi.py  adi_som.py  common.py  vivado.py  xilinx.py
adibuild/projects/: __init__.py  atf.py  boot.py  genalyzer.py  hdl.py  iio_emu.py  iio_oscilloscope.py  libad9361.py  libtinyiiod.py  linux.py  noos.py  uboot.py  zynqmp_boot.py
adibuild/utils/: __init__.py  git.py  logger.py  validators.py
build_defs/: adsy1100.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/quality_improvements_20260314/: metadata.json  spec.md
conductor/tracks/quality_improvements_20260314/: index.md  plan.md
conductor/tracks/robust_vivado_download_20260314/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/vivado-download/: plan.md
configs/genalyzer/: default.yaml
configs/iio_emu/: default.yaml
configs/iio_oscilloscope/: default.yaml
configs/libad9361/: default.yaml
configs/libtinyiiod/: default.yaml
configs/linux/: 2023_R2.yaml  microblaze.yaml  microblaze_vcu118_ad9081.yaml  zynq.yaml  zynqmp.yaml
configs/noos/: default.yaml
configs/schema/: linux_config.schema.json  noos_config.schema.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_static/css/: custom.css
docs/source/api-reference/: index.rst
docs/source/api-reference/core/: builder.rst  config.rst  executor.rst  index.rst  toolchain.rst
docs/source/api-reference/projects/: atf.rst  boot.rst  genalyzer.rst  hdl.rst  iio_emu.rst  iio_oscilloscope.rst  index.rst  libad9361.rst  libtinyiiod.rst  linux.rst  noos.rst  uboot.rst  zynqmp_boot.rst
docs/source/api-reference/utils/: git.rst  index.rst  logger.rst  validators.rst
docs/source/developer-guide/: architecture.rst  contributing.rst  index.rst
docs/source/examples/: index.rst
docs/source/examples/python-api/: index.rst
docs/source/examples/simple/: index.rst
docs/source/getting-started/: configuration-basics.rst  first-build.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst
docs/source/mcp-server/: index.rst
docs/source/user-guide/: boot-bin-generation.rst  build-outputs.rst  cli-usage.rst  configuration-guide.rst  docker-builds.rst  hdl-builds.rst  index.rst  library-builds.rst  mcp-server.rst  noos-builds.rst  platforms.rst  python-api-usage.rst  toolchain-management.rst  zynqmp-boot.rst
examples/: build_microblaze_kernel.py  build_zynq_kernel.py  build_zynqmp_kernel.py  custom_config.py
scripts/: gen_fabricdev_reference.py  gen_kuiper_reference.py  imageextractor.py  kuiper_parser.py  requirements.txt
services/: docker-compose.yml
services/dashboard/: app.py  requirements.txt
services/dashboard/assets/: style.css
test/: conftest.py
test/cli/: conftest.py  test_boot_commands.py  test_config_commands.py  test_hdl_commands.py  test_hdl_version_check.py  test_helpers.py  test_iio_emu_commands.py  test_linux_commands.py  test_main.py  test_mcp_server.py  test_noos_commands.py  test_script_generation.py  test_ssh_commands.py  test_toolchain_command.py  test_vivado_commands.py
test/core/: test_bare_metal_toolchain.py  test_config.py  test_docker.py  test_download_runner_docker.py  test_executor.py  test_vivado_installer.py  test_vivado_strategies.py
test/examples/: __init__.py  conftest.py  test_build_zynq_example.py  test_build_zynqmp_example.py  test_custom_config_example.py
test/fixtures/docker/: vivado-installer-ubuntu2204.Dockerfile
test/integration/: __init__.py  conftest.py  docker_utils.py  test_amd_account_access.py  test_cli_workflows_new.py  test_real_hdl_build.py  test_real_microblaze_build.py  test_real_noos_build.py  test_real_vivado_docker_install.py  test_real_zynq_build.py  test_real_zynqmp_boot.py  test_real_zynqmp_build.py  test_robust_download.py  test_ssh_hdl_build.py
test/linux/: test_microblaze_platform.py  test_zynq_platform.py  test_zynqmp_platform.py
test/projects/: test_atf_uboot.py  test_boot.py  test_genalyzer.py  test_hdl.py  test_hdl_windows.py  test_libad9361.py  test_noos.py  test_zynqmp_boot.py
test/unit/: test_docker_vivado_utils.py  test_env_validation.py  test_executor_new.py  test_logger.py  test_validators_new.py
tests/: conftest.py  test_hdl.py  test_hdl_upload.py  test_linux.py
