[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyadi-build"
dynamic = ["version", "readme"]
description = "Unified build helper and metadata manager"
license = {text = "EPL-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"]
requires-python = ">=3.7"
authors = [
    {name = "Travis Collins", email="travis.collins@analog.com"},
]
maintainers = [
    {name = "Travis Collins", email="travis.collins@analog.com"},
    {name = "Analog Devices, Inc"}
]
dependencies = [
    'dohq-artifactory',
    'pymongo',
    'minio',
    'GitPython',
]

[tool.setuptools.dynamic]
version = {attr = "adibuild.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["adibuild*"]
exclude = ["tests*"]
namespaces = true

# [project.scripts]
# adibuildiio = "adibuild.cli.iiotools:cli"
# adibuild = "adibuild.cli.visatools:cli"

[project.optional-dependencies]
cli = ["click", "pyadi-iio>=0.0.17", "requests"]
# web = ["fastapi[standard]", "uvicorn", "pydantic", "jinja2", "starlette"]

# [project.entry-points.pytest11]
# adibuild = "adibuild.plugin"

[project.urls]
homepage = "https://tfcollins.github.io/adibuild/"
documentation = "https://tfcollins.github.io/adibuild/"
repository = "https://github/tfcollins/adibuild/"

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[tool.mypy]
ignore_missing_imports="true"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests",
]
log_cli = true
#log_cli_level = "CRITICAL"
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
